@@ -4,8 +4,11 @@ import de.fhdw.Kino.App.service.AuffuehrungService;
 import de.fhdw.Kino.App.service.FilmService;
 import de.fhdw.Kino.Lib.dto.AuffuehrungDTO;
 import de.fhdw.Kino.Lib.dto.FilmDTO;
+import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.format.annotation.DateTimeFormat;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDate;
@@ -21,20 +24,35 @@ public class VorstellungController {
     @Autowired
     private FilmService filmService;
 
-    @GetMapping
-    public Double getVorstellungen(
+    @GetMapping("/auffuehrungen")
+    public List<AuffuehrungDTO> getAuffuehrung(
             @RequestParam(name = "datum", required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate datum) {
-
-        //TODO --> Pair<>, MutablePair<>?
-        List<FilmDTO> filmDTOs = filmService.getAllFilme();
         List<AuffuehrungDTO> auffuehrungDTOs = auffuehrungService.getAllAuffuehrungen();
 
         if(datum != null) {
-            return new Double(null, auffuehrungDTOs.stream()
-                    .filter(a -> a.startzeit().toLocalDate().equals(datum))
-                    .collect(Collectors.toList()));
+            return auffuehrungDTOs.stream().filter(a -> a.startzeit().toLocalDate().equals(datum)).toList();
         }
-        return new Double(null, auffuehrungDTOs);
+
+        return auffuehrungDTOs;
+    }
+
+    @GetMapping("/filme")
+    public List<FilmDTO> getFilme() {
+        return filmService.getAllFilme();
+    }
+
+    // Endpunkt zum Anlegen eines Films
+    @PostMapping("/film")
+    public ResponseEntity<FilmDTO> createFilm(@Valid @RequestBody FilmDTO film) {
+        return new ResponseEntity<>(filmService.createFilm(film), HttpStatus.CREATED);
+    }
+
+    // Endpunkt zum Anlegen einer Aufführung
+// Erwartet wird ein JSON, in dem u.a. Startzeit, ein gültiger Film (nur ID erforderlich)
+// und ein Kinosaal (ebenfalls referenziert über ID) übergeben werden.
+    @PostMapping("/auffuehrung")
+    public ResponseEntity<AuffuehrungDTO> createAuffuehrung(@Valid @RequestBody AuffuehrungDTO auffuehrung) {
+        return new ResponseEntity<>(auffuehrungService.createAuffuehrung(auffuehrung), HttpStatus.CREATED);
     }
 
 
